--- a/hubungi/index.html
+++ b/hubungi/index.html
@@ -168,18 +168,30 @@
 
 
 
-<form action="https://formspree.io/f/xzzdvozj" method="POST">
-    <label for="name">Nama:</label>
-    <input type="text" id="name" name="name" required>
+<div class="wp-block-kadence-column kadence-column41_43d787-00">
+    <div class="kt-inside-inner-col">
+        <div class="wp-block-kadence-form kadence-form-41_7ea539-25 kb-form-wrap">
+            <form class="kb-form" action="https://formspree.io/f/xzzdvozj" method="post">
+                <div class="kadence-blocks-form-field kb-field-desk-width-100 kb-input-size-standard">
+                    <label for="kb_field_41_7ea539-25_0">Nama Penuh</label>
+                    <input name="nama_penuh" id="kb_field_41_7ea539-25_0" type="text" placeholder="Nama Penuh" required class="kb-field kb-text-style-field kb-text-field kb-field-0">
+                </div>
+                <div class="kadence-blocks-form-field kb-form-field-1 kb-field-desk-width-100 kb-input-size-standard">
+                    <label for="kb_field_41_7ea539-25_1">E-mel<span class="required">*</span></label>
+                    <input name="email" id="kb_field_41_7ea539-25_1" type="email" placeholder="Email Address" required class="kb-field kb-text-style-field kb-email-field kb-field-1">
+                </div>
+                <div class="kadence-blocks-form-field kb-form-field-2 kb-field-desk-width-100 kb-input-size-standard">
+                    <label for="kb_field_41_7ea539-25_2">Mesej<span class="required">*</span></label>
+                    <textarea name="mesej" id="kb_field_41_7ea539-25_2" placeholder="Tulis mesej anda di sini..." rows="4" required class="kb-field kb-text-style-field kb-textarea-field kb-field-2"></textarea>
+                </div>
+                <div class="kadence-blocks-form-field kb-submit-field kb-field-desk-width-100">
+                    <button class="kb-forms-submit button kb-button-size-custom kb-button-width-full">Hantar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
-    <label for="email">E-mel:</label>
-    <input type="email" id="email" name="email" required>
-
-    <label for="message">Mesej:</label>
-    <textarea id="message" name="message" required></textarea>
-
-    <button type="submit">Hantar</button>
-</form>
 
 
 
