--- a/hubungi/index.html
+++ b/hubungi/index.html
@@ -173,8 +173,8 @@
         <div class="wp-block-kadence-form kadence-form-41_7ea539-25 kb-form-wrap">
             <form class="kb-form" action="https://formspree.io/f/xzzdvozj" method="post">
                 <div class="kadence-blocks-form-field kb-field-desk-width-100 kb-input-size-standard">
-                    <label for="kb_field_41_7ea539-25_0">Nama Penuh</label>
-                    <input name="nama_penuh" id="kb_field_41_7ea539-25_0" type="text" placeholder="Nama Penuh" required class="kb-field kb-text-style-field kb-text-field kb-field-0">
+                    <label for="">Nama Penuh</label>
+                    <input name="nama_penuh" id="" type="text" placeholder="Nama Penuh" required class="  ">
                 </div>
                 <div class="kadence-blocks-form-field kb-form-field-1 kb-field-desk-width-100 kb-input-size-standard">
                     <label for="kb_field_41_7ea539-25_1">E-mel<span class="required">*</span></label>
@@ -184,7 +184,7 @@
                     <label for="kb_field_41_7ea539-25_2">Mesej<span class="required">*</span></label>
                     <textarea name="mesej" id="kb_field_41_7ea539-25_2" placeholder="Tulis mesej anda di sini..." rows="4" required class="kb-field kb-text-style-field kb-textarea-field kb-field-2"></textarea>
                 </div>
-                <div class="kadence-blocks-form-field kb-submit-field kb-field-desk-width-100">
+                <div class=" kb-field-desk-width-100">
                     <button class="kb-forms-submit button kb-button-size-custom kb-button-width-full">Hantar</button>
                 </div>
             </form>
