--- a/hubungi/index.html
+++ b/hubungi/index.html
@@ -174,7 +174,7 @@
             <form class="kb-form" action="https://formspree.io/f/xzzdvozj" method="post">
                 <div class="kadence-blocks-form-field kb-field-desk-width-100 kb-input-size-standard">
                     <label for="">Nama Penuh</label>
-                    <input name="nama_penuh" id="" type="text" placeholder="Nama Penuh" required class="  ">
+                    <input name="nama_penuh" id="" type="text" placeholder="Nama Penuh" required class="kb-field kb-text-style-field kb-text-field kb-field-0">
                 </div>
                 <div class="kadence-blocks-form-field kb-form-field-1 kb-field-desk-width-100 kb-input-size-standard">
                     <label for="kb_field_41_7ea539-25_1">E-mel<span class="required">*</span></label>
