--- a/faq/index.html
+++ b/faq/index.html
@@ -187,7 +187,31 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 <div class="wp-block-kadence-pane kt-accordion-pane kt-accordion-pane-4 kt-pane183_4cbd25-df">
 <div class="kt-accordion-header-wrap"><button class="kt-blocks-accordion-header kt-acccordion-button-label-show" type="button"><span class="kt-blocks-accordion-title-wrap"><span class="kt-blocks-accordion-title">Berapakah kos pembangunan laman web statik?</span></span><span class="kt-blocks-accordion-icon-trigger"></span></button></div>
 <div class="kt-accordion-panel kt-accordion-panel-hidden"><div class="kt-accordion-panel-inner">
-<p class="has-theme-palette-9-color has-text-color">Kos pembangunan dan reka bentuk laman web statik adalah RM300. Namun, kos untuk hosting dan nama domain bergantung kepada pilihan dan keperluan pelanggan.</p>
+<p class="has-theme-palette-9-color has-text-color">Kos pembangunan dan reka bentuk laman web statik adalah <strong>RM300 untuk satu halaman</strong>.</p>
+
+
+
+<p class="has-theme-palette-9-color has-text-color"><strong>Harga tambahan:</strong></p>
+
+
+
+<p class="has-theme-palette-9-color has-text-color"><strong>Setiap halaman tambahan</strong> dikenakan caj <strong>RM100</strong>.</p>
+
+
+
+<p class="has-theme-palette-9-color has-text-color"><strong>Diskaun 20%</strong> untuk laman web dengan <strong>5 halaman atau lebih</strong>.</p>
+
+
+
+<p class="has-theme-palette-9-color has-text-color"><strong>Hosting Percuma</strong> – Jika anda memilih platform seperti GitHub Pages atau Wix.</p>
+
+
+
+<p class="has-theme-palette-9-color has-text-color"><strong>Hosting Berbayar</strong> – Anda boleh memilih hosting premium (contohnya, Hostinger, SiteGround, Exabytes) dan domain sendiri. <strong>Kos ini tidak termasuk dalam harga pembangunan laman web.</strong></p>
+
+
+
+<p class="has-theme-palette-9-color has-text-color">Untuk maklumat lanjut atau sebut harga berdasarkan keperluan anda, hubungi Kienon sekarang!</p>
 </div></div>
 </div>
 
@@ -196,7 +220,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 <div class="wp-block-kadence-pane kt-accordion-pane kt-accordion-pane-5 kt-pane183_93246b-57">
 <div class="kt-accordion-header-wrap"><button class="kt-blocks-accordion-header kt-acccordion-button-label-show" type="button"><span class="kt-blocks-accordion-title-wrap"><span class="kt-blocks-accordion-title">Di manakah WEBSITE asas dihoskan?</span></span><span class="kt-blocks-accordion-icon-trigger"></span></button></div>
 <div class="kt-accordion-panel kt-accordion-panel-hidden"><div class="kt-accordion-panel-inner">
-<p class="has-theme-palette-9-color has-text-color">Laman web asas boleh dihoskan melalui platform seperti GitHub, Canva, Wix, dan Weebly, bergantung kepada keperluan pelanggan.</p>
+<p class="has-theme-palette-9-color has-text-color">Laman web asas boleh dihoskan melalui platform seperti GitHub, Canva, Wix, Weebly, dan Google sites bergantung kepada keperluan pelanggan.</p>
 </div></div>
 </div>
 
