--- a/faq/index.html
+++ b/faq/index.html
@@ -268,7 +268,7 @@
 										<div class="site-footer-middle-section-2 site-footer-section footer-section-inner-items-1">
 						<div class="footer-widget-area widget-area site-footer-focus-item footer-widget3 content-align-left content-tablet-align-center content-mobile-align-default content-valign-default content-tablet-valign-default content-mobile-valign-default" data-section="sidebar-widgets-footer3">
 	<div class="footer-widget-area-inner site-info-inner">
-		<section id="nav_menu-3" class="widget widget_nav_menu"><h2 class="widget-title">Resources</h2>
+		<section id="nav_menu-3" class="widget widget_nav_menu"><h2 class="widget-title">Sumber</h2>
 <div class="menu-sumber-container"><ul id="menu-sumber" class="menu">
 <li id="menu-item-394" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-394"><a href="https://kienon.github.io/Kienon/hubungi">Hubungi Kami</a></li>
 <li id="menu-item-395" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-395"><a href="https://kienon.github.io/Kienon/perkhidmatan">Perkhidmatan</a></li>
@@ -281,7 +281,7 @@
 										<div class="site-footer-middle-section-3 site-footer-section footer-section-inner-items-1">
 						<div class="footer-widget-area widget-area site-footer-focus-item footer-widget2 content-align-default content-tablet-align-center content-mobile-align-default content-valign-default content-tablet-valign-default content-mobile-valign-default" data-section="sidebar-widgets-footer2">
 	<div class="footer-widget-area-inner site-info-inner">
-		<section id="nav_menu-2" class="widget widget_nav_menu"><h2 class="widget-title">About</h2>
+		<section id="nav_menu-2" class="widget widget_nav_menu"><h2 class="widget-title">Penafian</h2>
 <div class="menu-about-container"><ul id="menu-about" class="menu">
 <li id="menu-item-398" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-398"><a href="https://kienon.github.io/Kienon/terma-syarat">Terma dan Syarat</a></li>
 <li id="menu-item-399" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-399"><a href="https://kienon.github.io/Kienon/dasar-privasi">Dasar Privasi</a></li>
