--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-<html lang="en-US" class="no-js" itemtype="https://schema.org/WebPage" itemscope>
+<html lang="ms" class="no-js" itemtype="https://schema.org/WebPage" itemscope>
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-	<title>Kienon</title>
-<meta name="robots" content="max-image-preview:large">
+	<title>Kienon | Website Design & SEO Services</title>
+	<meta name="robots" content="index, follow">
+	<meta name="description" content="Perkhidmatan reka bentuk laman web dan SEO profesional oleh Kienon. Kami membantu anda membina website yang menarik dan dioptimumkan untuk SEO.">
+	<link rel="canonical" href="https://kienon.github.io/Kienon/">
+	
+	<!-- Open Graph / Facebook -->
+	<meta property="og:title" content="Kienon - Website & SEO Services">
+	<meta property="og:description" content="Kami membantu anda membina website yang menarik dan dioptimumkan untuk SEO.">
+	<meta property="og:image" content="https://kienon.github.io/Kienon/assets/seo-image.jpg">
+	<meta property="og:url" content="https://kienon.github.io/Kienon/">
+	
+	<!-- Twitter -->
+	<meta name="twitter:card" content="summary_large_image">
+	
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
-	<link rel="alternate" type="application/rss+xml" title="Kienon &raquo; Feed" href="https://kienon.github.io/Kienon/feed/">
-<link rel="alternate" type="application/rss+xml" title="Kienon &raquo; Comments Feed" href="https://kienon.github.io/Kienon/comments/feed/">
-			<script>document.documentElement.classList.remove( 'no-js' );</script>
+	
+	<script>document.documentElement.classList.remove('no-js');</script>
 			
 <link rel="stylesheet" id="wp-block-library-css" href="https://kienon.github.io/Kienon/wp-includes/css/dist/block-library/style.min.css?ver=6.7.1" media="all">
 <style id="classic-theme-styles-inline-css">/*! This file is auto-generated */
