--- a/perkhidmatan/index.html
+++ b/perkhidmatan/index.html
@@ -211,7 +211,12 @@
 
 
 
-<div class="wp-block-kadence-advancedbtn kb-buttons-wrap kb-btns40_75b9e5-e0"><span class="kb-button kt-button button kb-btn40_0961d7-3a kt-btn-size-standard kt-btn-width-type-auto kb-btn-global-inherit kt-btn-has-text-true kt-btn-has-svg-false wp-block-button__link wp-block-kadence-singlebtn"><span class="kt-btn-inner-text">Hubungi Kienon</span></span></div>
+<div class="wp-block-kadence-advancedbtn kb-buttons-wrap kb-btns40_75b9e5-e0">
+    <a href="https://kienon.github.io/Kienon/hubungi/" class="kb-button kt-button button kb-btn40_0961d7-3a kt-btn-size-standard kt-btn-width-type-auto kb-btn-global-inherit kt-btn-has-text-true kt-btn-has-svg-false wp-block-button__link wp-block-kadence-singlebtn">
+        <span class="kt-btn-inner-text">Hubungi Kienon</span>
+    </a>
+</div>
+
 </div></div>
 
 </div></div></div></div>
