--- a/hubungi/index.html
+++ b/hubungi/index.html
@@ -228,7 +228,7 @@
 </section>	</div>
 </div>
 <!-- .footer-widget4 -->
-					<</div>
+					</div>
 										<div class="site-footer-middle-section-2 site-footer-section footer-section-inner-items-1">
 						<div class="footer-widget-area widget-area site-footer-focus-item footer-widget3 content-align-left content-tablet-align-center content-mobile-align-default content-valign-default content-tablet-valign-default content-mobile-valign-default" data-section="sidebar-widgets-footer3">
 	<div class="footer-widget-area-inner site-info-inner">
