--- a/leaveapp/index.html
+++ b/leaveapp/index.html
@@ -82,7 +82,7 @@
 <div class="output" id="output"></div>
 
 <script>
-  const API_BASE = "https://your-render-url.onrender.com"; // Ganti dengan URL backend anda
+  const API_BASE = "https://hr-leave.onrender.com"; // Ganti dengan URL backend anda
 
   const output = document.getElementById("output");
   const form = document.getElementById("applyLeaveForm");
