--- a/foryou.html
+++ b/foryou.html
@@ -3,22 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday Aiwa 🎉</title>
+  <title>Happy Birthday Aiwa 🎂💖</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      height: 100vh;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fad0c4, #fbc2eb);
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fbc2eb, #a18cd1);
       background-size: 300% 300%;
-      animation: gradientBG 10s ease infinite;
+      animation: gradientBG 12s ease infinite;
       font-family: 'Poppins', sans-serif;
       text-align: center;
       color: white;
+      overflow: hidden;
     }
 
     @keyframes gradientBG {
@@ -28,22 +24,29 @@
     }
 
     h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
-      animation: bounce 2s infinite;
+      font-size: 2.5rem;
+      margin-top: 60px;
       text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
+      animation: fadeIn 3s ease-in-out;
     }
 
     h2 {
-      font-size: 1.5rem;
-      margin-bottom: 30px;
-      text-shadow: 1px 1px 6px rgba(0,0,0,0.2);
+      font-size: 1.3rem;
+      margin: 10px 0 30px;
+      animation: fadeIn 4s ease-in-out;
     }
 
-    @keyframes bounce {
-      0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
-      40% {transform: translateY(-20px);}
-      60% {transform: translateY(-10px);}
+    @keyframes fadeIn {
+      from {opacity: 0;}
+      to {opacity: 1;}
+    }
+
+    #typed {
+      font-size: 1.2rem;
+      margin: 20px auto;
+      width: 80%;
+      color: #fff;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.2);
     }
 
     .btn {
@@ -57,7 +60,6 @@
       transition: 0.3s;
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
-
     .btn:hover {
       background: #ff4b5c;
       color: #fff;
@@ -73,77 +75,99 @@
       pointer-events: none;
     }
 
-    .balloon {
+    .floating {
       position: absolute;
       bottom: -150px;
-      width: 80px;
-      height: 100px;
-      background: red;
-      border-radius: 50%;
-      animation: floatUp 10s linear infinite;
+      font-size: 2rem;
+      animation: floatUp 8s linear infinite;
     }
 
     @keyframes floatUp {
       from {transform: translateY(0);}
       to {transform: translateY(-120vh);}
     }
+
+    #countdown {
+      font-size: 1rem;
+      margin-top: 15px;
+      color: #fff;
+    }
   </style>
 </head>
 <body>
 
-  <div>
-    <h1>🎉 Happy Birthday Aiwa 🎂</h1>
-    <h2>Wishing you lots of happiness, joy, and success ✨</h2>
-    <button class="btn" onclick="startCelebration()">🎁 Click Me 🎶</button>
-  </div>
+  <h1>🎉 Happy Birthday Aiwa Jailin 🎂💖</h1>
+  <h2>Today is your special day ✨</h2>
+
+  <div id="typed"></div>
+  <div id="countdown"></div>
+  <button class="btn" onclick="startCelebration()">🎁 Open Your Surprise</button>
 
   <canvas id="confetti"></canvas>
 
   <audio id="music" loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+    <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mpeg">
   </audio>
 
+  <!-- Typed.js -->
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   <script>
+    // Typing effect
+    var typed = new Typed("#typed", {
+      strings: [
+        "Dear Aiwa 💌,",
+        "On your birthday, I wish you endless happiness, joy, and success.",
+        "May today be as wonderful as your smile 😊",
+        "And may this year bring you closer to all your dreams 💖"
+      ],
+      typeSpeed: 50,
+      backSpeed: 25,
+      loop: false
+    });
+
+    // Countdown
+    const targetDate = new Date("Oct 16, 2025 00:00:00").getTime();
+    setInterval(() => {
+      let now = new Date().getTime();
+      let distance = targetDate - now;
+
+      if (distance > 0) {
+        let days = Math.floor(distance / (1000*60*60*24));
+        let hours = Math.floor((distance % (1000*60*60*24))/(1000*60*60));
+        let minutes = Math.floor((distance % (1000*60*60))/(1000*60));
+        let seconds = Math.floor((distance % (1000*60))/1000);
+        document.getElementById("countdown").innerText = 
+          `⏳ ${days}d ${hours}h ${minutes}m ${seconds}s left until your birthday 🎂`;
+      } else {
+        document.getElementById("countdown").innerText = "🎂 It's your birthday today, Aiwa! 🎉";
+      }
+    }, 1000);
+
+    // Celebration
     function startCelebration() {
-      // Play music
       let music = document.getElementById("music");
       music.play();
 
-      // Confetti effect
-      var duration = 5 * 1000;
+      // Confetti burst
+      var duration = 6 * 1000;
       var end = Date.now() + duration;
 
       (function frame() {
-        confetti({
-          particleCount: 7,
-          angle: 60,
-          spread: 55,
-          origin: { x: 0 }
-        });
-        confetti({
-          particleCount: 7,
-          angle: 120,
-          spread: 55,
-          origin: { x: 1 }
-        });
-        if (Date.now() < end) {
-          requestAnimationFrame(frame);
-        }
+        confetti({ particleCount: 7, angle: 60, spread: 55, origin: { x: 0 } });
+        confetti({ particleCount: 7, angle: 120, spread: 55, origin: { x: 1 } });
+        if (Date.now() < end) requestAnimationFrame(frame);
       }());
 
-      // Balloons
-      for (let i = 0; i < 10; i++) {
-        let balloon = document.createElement("div");
-        balloon.className = "balloon";
-        balloon.style.left = Math.random() * 100 + "vw";
-        balloon.style.background = `hsl(${Math.random() * 360}, 70%, 60%)`;
-        balloon.style.animationDuration = (5 + Math.random() * 5) + "s";
-        document.body.appendChild(balloon);
-
-        setTimeout(() => {
-          balloon.remove();
-        }, 10000);
+      // Floating hearts & balloons
+      for (let i = 0; i < 15; i++) {
+        let el = document.createElement("div");
+        el.className = "floating";
+        el.innerHTML = Math.random() > 0.5 ? "🎈" : "❤️";
+        el.style.left = Math.random() * 100 + "vw";
+        el.style.animationDuration = (5 + Math.random() * 5) + "s";
+        document.body.appendChild(el);
+        setTimeout(() => el.remove(), 10000);
       }
     }
   </script>
