--- a/foryou.html
+++ b/foryou.html
@@ -12,7 +12,6 @@
       margin: 0;
       height: 100vh;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
@@ -34,6 +33,32 @@
       max-width: 90%;
       line-height: 1.8;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+      display: none;
+    }
+    .overlay {
+      position: fixed;
+      top:0; left:0; right:0; bottom:0;
+      background: rgba(0,0,0,0.7);
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      z-index: 9999;
+    }
+    .start-btn {
+      background:#fff;
+      color:#e91e63;
+      font-weight:600;
+      padding:15px 30px;
+      border:none;
+      border-radius:30px;
+      font-size:1.2rem;
+      cursor:pointer;
+      box-shadow:0 4px 10px rgba(0,0,0,0.3);
+      transition:0.3s;
+    }
+    .start-btn:hover {
+      transform: scale(1.05);
+      background:#ffe6ec;
     }
     .hearts {
       position: absolute;
@@ -47,63 +72,60 @@
       50% {opacity: 1;}
       100% {transform: translateY(-100vh) scale(1.2); opacity: 0;}
     }
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 20px;
-      background: #fff;
-      color: #e91e63;
-      font-weight: 600;
-      cursor: pointer;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      transition: 0.3s;
-    }
-    button:hover {
-      transform: scale(1.05);
-      background: #ffe6ec;
-    }
   </style>
 </head>
 <body>
-  <h1>🎂 Happy Birthday Aiwa 🎂</h1>
-  <div id="typed"></div>
+  <div class="overlay" id="overlay">
+    <button class="start-btn" onclick="startSurprise()">💝 Buka Surprise</button>
+  </div>
 
-  <!-- Floating hearts -->
-  <div class="hearts" style="left:10%;">❤️</div>
-  <div class="hearts" style="left:30%;">💖</div>
-  <div class="hearts" style="left:50%;">💕</div>
-  <div class="hearts" style="left:70%;">💓</div>
-  <div class="hearts" style="left:90%;">💗</div>
+  <div id="content" style="display:none;">
+    <h1>🎂 Happy Birthday Aiwa 🎂</h1>
+    <div id="typed"></div>
+    <!-- Hearts -->
+    <div class="hearts" style="left:10%;">❤️</div>
+    <div class="hearts" style="left:30%;">💖</div>
+    <div class="hearts" style="left:50%;">💕</div>
+    <div class="hearts" style="left:70%;">💓</div>
+    <div class="hearts" style="left:90%;">💗</div>
+  </div>
 
   <!-- Music -->
   <audio id="bg-music" loop>
     <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_92f8433c24.mp3?filename=happy-birthday-113170.mp3" type="audio/mpeg">
   </audio>
-  <button onclick="toggleMusic()">🎵 Play / Pause Music</button>
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
-    var typed = new Typed('#typed', {
-      strings: [
-        "Selamat Hari Jadi Aiwa ✨",
-        "Semoga panjang umur, murah rezeki, dan happy selalu 💕",
-        "Kau ni orang special bah… sebab tu saya berani buat benda ni khas untuk kau ❤️",
-        "Harap tahun ni bawa banyak senyuman dan moment indah untuk kau 🥰"
-      ],
-      typeSpeed: 45,
-      backSpeed: 0,
-      smartBackspace: false,
-      loop: false
-    });
+    function startSurprise() {
+      document.getElementById("overlay").style.display = "none";
+      document.getElementById("content").style.display = "block";
+      document.getElementById("typed").style.display = "block";
 
-    function toggleMusic() {
+      // Start music
       var music = document.getElementById("bg-music");
-      if (music.paused) {
-        music.play();
-      } else {
-        music.pause();
-      }
+      music.play();
+
+      // Start typing
+      new Typed('#typed', {
+        strings: [
+          "Selamat Hari Jadi Aiwa ✨",
+          "Semoga panjang umur, murah rezeki, dan happy selalu 💕",
+          "Kau ni orang special bah… sebab tu saya berani buat benda ni khas untuk kau ❤️",
+          "Harap tahun ni bawa banyak senyuman dan moment indah untuk kau 🥰"
+        ],
+        typeSpeed: 45,
+        backSpeed: 0,
+        loop: false
+      });
+
+      // Confetti burst
+      confetti({
+        particleCount: 150,
+        spread: 80,
+        origin: { y: 0.6 }
+      });
     }
   </script>
 </body>
