--- a/foryou.html
+++ b/foryou.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="ms">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday Aiwa 🎂</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <title>Happy Birthday Aiwa</title>
   <style>
     body {
       margin: 0;
@@ -14,118 +11,66 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      flex-direction: column;
+      background: linear-gradient(135deg, #ffdde1, #ee9ca7);
       font-family: 'Poppins', sans-serif;
-      overflow: hidden;
+      color: #fff;
       text-align: center;
-      padding: 20px;
     }
     h1 {
-      font-family: 'Pacifico', cursive;
-      font-size: 2.5rem;
-      color: #fff;
+      font-size: 2.2rem;
       margin-bottom: 20px;
-      text-shadow: 2px 2px 5px rgba(0,0,0,0.2);
     }
-    #typed {
+    #message {
       font-size: 1.2rem;
-      color: #fff;
       max-width: 90%;
-      line-height: 1.8;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-      display: none;
+      margin: 0 auto;
+      white-space: pre-line;
+      min-height: 120px;
     }
-    .overlay {
-      position: fixed;
-      top:0; left:0; right:0; bottom:0;
-      background: rgba(0,0,0,0.7);
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      z-index: 9999;
+    .btn {
+      margin-top: 20px;
+      background: rgba(255,255,255,0.2);
+      border: 2px solid #fff;
+      padding: 10px 20px;
+      border-radius: 25px;
+      color: #fff;
+      font-size: 1rem;
+      cursor: pointer;
     }
-    .start-btn {
-      background:#fff;
-      color:#e91e63;
-      font-weight:600;
-      padding:15px 30px;
-      border:none;
-      border-radius:30px;
-      font-size:1.2rem;
-      cursor:pointer;
-      box-shadow:0 4px 10px rgba(0,0,0,0.3);
-      transition:0.3s;
-    }
-    .start-btn:hover {
-      transform: scale(1.05);
-      background:#ffe6ec;
-    }
-    .hearts {
-      position: absolute;
-      bottom: -10px;
-      font-size: 2rem;
-      animation: floatUp 6s infinite;
-      opacity: 0.7;
-    }
-    @keyframes floatUp {
-      0% {transform: translateY(0) scale(0.8); opacity: 0.7;}
-      50% {opacity: 1;}
-      100% {transform: translateY(-100vh) scale(1.2); opacity: 0;}
+    .btn:hover {
+      background: rgba(255,255,255,0.4);
     }
   </style>
 </head>
 <body>
-  <div class="overlay" id="overlay">
-    <button class="start-btn" onclick="startSurprise()">💝 Buka Surprise</button>
-  </div>
 
-  <div id="content" style="display:none;">
-    <h1>🎂 Happy Birthday Aiwa 🎂</h1>
-    <div id="typed"></div>
-    <!-- Hearts -->
-    <div class="hearts" style="left:10%;">❤️</div>
-    <div class="hearts" style="left:30%;">💖</div>
-    <div class="hearts" style="left:50%;">💕</div>
-    <div class="hearts" style="left:70%;">💓</div>
-    <div class="hearts" style="left:90%;">💗</div>
-  </div>
+  <h1>🎉 Selamat Hari Jadi Aiwa 🎂</h1>
+  <div id="message"></div>
 
-  <!-- Music -->
+  <button class="btn" onclick="playMusic()">🎵 Play Music</button>
+
   <audio id="bg-music" loop>
-    <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_92f8433c24.mp3?filename=happy-birthday-113170.mp3" type="audio/mpeg">
+    <source src="https://archive.org/download/the-walters-i-love-you-so_20230927_2012/The%20Walters%20-%20I%20Love%20You%20So.mp3" type="audio/mpeg">
   </audio>
 
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
-    function startSurprise() {
-      document.getElementById("overlay").style.display = "none";
-      document.getElementById("content").style.display = "block";
-      document.getElementById("typed").style.display = "block";
+    const text = `Semoga panjang umur, murah rezeki, dan happy selalu 💖
+Kau ni orang special bah… sebab tu saya berani buat benda ni khas untuk kau ❤️
+Harap tahun ni bawa banyak senyuman dan moment indah untuk kau 🥰`;
 
-      // Start music
-      var music = document.getElementById("bg-music");
-      music.play();
+    let i = 0;
+    function typeWriter() {
+      if (i < text.length) {
+        document.getElementById("message").innerHTML += text.charAt(i);
+        i++;
+        setTimeout(typeWriter, 60); // speed typing (60ms)
+      }
+    }
+    typeWriter();
 
-      // Start typing
-      new Typed('#typed', {
-        strings: [
-          "Selamat Hari Jadi Aiwa ✨",
-          "Semoga panjang umur, murah rezeki, dan happy selalu 💕",
-          "Kau ni orang special bah… sebab tu saya berani buat benda ni khas untuk kau ❤️",
-          "Harap tahun ni bawa banyak senyuman dan moment indah untuk kau 🥰"
-        ],
-        typeSpeed: 45,
-        backSpeed: 0,
-        loop: false
-      });
-
-      // Confetti burst
-      confetti({
-        particleCount: 150,
-        spread: 80,
-        origin: { y: 0.6 }
-      });
+    function playMusic() {
+      document.getElementById("bg-music").play();
     }
   </script>
 </body>
